--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^4.0.0",
+    "redux-actions": "^2.4.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-persist": "^5.9.1",
     "redux-saga": "^0.16.0",
